--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qsza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-    <link rel="stylesheet" href="https://d396qsza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-    <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -72,6 +73,26 @@
       }
       .statistics h3, .statistics p {
         color: white;
+      }
+
+      /* Marketing Copy and Footer */
+      .copy {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
+      }
+      .asset {
+        padding: 2.5% 0%;
+      }
+      .footer {
+        color: #cccccc;
+        text-align: center;
+      }
+      .footer p {
+        font-size: 11px;
+      }
+      .footer a {
+        color: #ccccff;
       }
 
     </style>
@@ -175,12 +196,95 @@
       </div> <!-- /row-fluid pitch -->
 
       <!-- Beyond this part the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <!-- httpL//placehold.it -->
 
       <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
+        <div class="span5 copy">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            rhoncus nisi non blandit vulputate. Ut tincidunt leo rhoncus
+            pretium iaculis. Pellentesque nec ultrices velit. Suspendisse
+            potenti. Vestibulum rhoncus mi eget dignissim semper. Interdum
+            et malesuada fames ac ante ipsum primis in faucibus. Duis
+            molestie, lacus nec imperdiet scelerisque, quam massa
+            condimentum erat, in hendrerit nunc neque fermentum risus. Nam
+            laoreet ipsum a lacinia condimentum. Fusce vitae rutrum sem.
+          </p>
+
+        </div>
       </div> <!-- /row-fluid section1 -->
 
       <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>
+            Morbi in elit nec lorem feugiat mollis a sed eros. Proin
+            congue risus elit, a vestibulum nulla dapibus
+            adipiscing. Morbi nibh nunc, consectetur et bibendum
+            in, cursus vitae libero. Class aptent taciti sociosqu
+            ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Vestibulum et leo turpis. Proin eu purus vel
+            dolor imperdiet placerat. Quisque at posuere lorem, iaculis
+            venenatis sem. Sed mollis orci felis, nec aliquam lacus
+            rhoncus ultricies. Phasellus semper consectetur arcu, eu
+            sodales leo.
+          </p>
+        </div>
+        <div class="span5 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
       </div> <!-- /row-fluid section2 -->
+
+      <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+      <!-- This brings in jquery.js and boostrap.js as dependencies. -->
+      <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
+      <div class="row-fluid faq">
+        <div class="span10 offset1">
+          <h3>FAQ</h3>
+          <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+                  What does FAQ stand for?
+                </a>
+              </div> <!-- /accordion-heading -->
+              <div id="collapseOne" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  Frequently Asked Question.
+                </div>
+              </div> <!-- /collapseOne -->
+            </div> <!-- /accordion-group -->
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+                  What's a Frequently Asked Question?
+                </a>
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">
+                  A question which is commonly asked by users.
+                </div>
+              </div>
+            </div> <!-- accordion-group -->
+          </div> <!-- /accordion2 -->
+        </div>
+      </div> <!-- /row-fluid faq -->
+
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>
+            This work is licensed under the
+            <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>,
+            without all the cruft that would otherwise be put at the bottom of the page.
+          </p>
+        </div>
+      </div> <!-- /row-fluid footer -->
 
     </div> <!-- container -->
   </body>
