--- a/index.html
+++ b/index.html
@@ -95,7 +95,28 @@
         color: #ccccff;
       }
 
+      /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */
+      div.addthis_toolbox {
+        width: 252px;
+        margin: 0 auto;
+      }
+
     </style>
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-42839460-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+
   </head>
   <!-- Comment to have something to push when checking the dev/stage/prod flow -->
 
@@ -188,12 +209,28 @@
           </div> <!-- /span6 offset3 order -->
 
           <div class="span10 offset1 social">
+            <!-- AddThis Button BEGIN -->
+            <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+            <a class="addthis_button_preferred_1"></a>
+            <a class="addthis_button_preferred_2"></a>
+            <a class="addthis_button_preferred_3"></a>
+            <a class="addthis_button_preferred_4"></a>
+            <a class="addthis_button_compact"></a>
+            <a class="addthis_counter addthis_bubble_style"></a>
+            </div>
+            <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+            <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fb1aed4413d654"></script>
+            <!-- AddThis Button END -->
+          </div>
+
+          <div class="hidden span10 offset1 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-google-plus"><i class="icon-google-plus"></i> | Google+</button>
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-          </div> <!-- /span6 offset3 order -->
+          </div> <!-- /span10 offset1 order -->
+
         </div> <!-- /span5 actions -->
       </div> <!-- /row-fluid pitch -->
 
@@ -368,5 +405,16 @@
       </div> <!-- /row-fluid footer -->
 
     </div> <!-- container -->
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42839460-1', 'herokuapp.com');
+      ga('send', 'pageview');
+    </script>
+
   </body>
 </html>
