Homework 6, part 4: bitcoin payments.

--- a/index.html
+++ b/index.html
@@ -203,10 +203,15 @@
           </div> <!-- /span10 offset1 -->
 
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div> <!-- /span6 offset3 order -->
+            <a class="coinbase-button" data-code="5fb348cc9ce10b9ad941f0fbbdeeb3b7"
+               data-button-style="buy_now_large"
+               data-button-text="Preorder with Bitcoin"
+               href="https://coinbase.com/checkouts/5fb348cc9ce10b9ad941f0fbbdeeb3b7">
+              Preorder With Bitcoin
+            </a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+          </div>
+
 
           <div class="span10 offset1 social">
             <!-- AddThis Button BEGIN -->
@@ -237,7 +242,7 @@
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
-      <!-- httpL//placehold.it -->
+      <!-- http://placehold.it -->
 
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
@@ -245,7 +250,7 @@
         </div>
         <div class="span5 copy">
           <p>
-            Whats the best way to avoid losing money?
+            What&apos;s the best way to avoid losing money?
           </p>
 
           <p>
@@ -274,8 +279,8 @@
 
           <p>
             So what if you don't have enough money to invest in a hedge
-            fund?  What if you do not want to use options, or futures,
-            or swaps in order to manage your risk?
+            fund?  What if you do not want to use options, or forwards,
+            or futures, or swaps in order to manage your risk?
             What if your largest nest egg is in an account that doesn't
             even offer these as a possibility?
           </p>
@@ -307,7 +312,7 @@
             Retirement investors that either do not want to or can not
             use sophisticated financial strategies still want to reduce
             the amount of their investments at risk.  They just achieve
-            this my a different means.
+            this by a different means.
           </p>
 
           <p>
