--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
           <div class="span6 offset3 order">
             <a class="coinbase-button" data-code="5fb348cc9ce10b9ad941f0fbbdeeb3b7"
-               data-button-style="buy_now_large"
+               data-button-style="custom_large"
                data-button-text="Preorder with Bitcoin"
                href="https://coinbase.com/checkouts/5fb348cc9ce10b9ad941f0fbbdeeb3b7">
               Preorder With Bitcoin
