demo the production push

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>PennyKeeper</h1>
+          <h1>PennyKeEPer</h1>
         </div>
       </div>
 
